# hold-your-shell

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  hold-your-shell.py  main.py  pyproject.toml
.github/workflows/: publish.yml
hold_your_shell/: hold_your_shell.py
