[tool.poetry]
name = "hold-your-shell"
version = "0.1.0"
description = "Preview and confirm shell scripts before executing them."
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
